Fix unintended wrap in nav

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,38 +19,29 @@ header {
   grid-area: "header";
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 1rem;
-  flex-wrap: wrap;
-  border-bottom: .1rem solid black;
+  border-bottom: .1rem solid #339966;
+}
+header a {
+  text-decoration: none;
 }
 .header-brand a {
   font-size: 3rem;
   font-weight: bold;
   padding: 1rem;
-  text-decoration: none;
-}
-.header-links {
-  display: flex;
-  margin-left: 10rem;
-  margin-right: 10rem;
-}
-
-.header-links a {
-  text-decoration: none;
-  padding: 1rem;
 }
 .header-links-functions{
-  margin-right: 8rem;
   font-weight: bold;
 }
 .header-links-functions > a{
-  margin-left: 1.5rem;
+  margin: 0 1.5rem 0 1.5rem;
 }
 .header-links-manufacturers{
   font-weight: bold;
 }
 .header-links-manufacturers > a{
-  margin-left: 1.5rem;
+  margin: 0 1.5rem 0 1.5rem;
 }
 main {
   grid-area: "main";
